[gd_scene load_steps=14 format=3 uid="uid://bysjiaycf68tt"]

[ext_resource type="PackedScene" uid="uid://dsxd0uws3fyyp" path="res://UI/Weapon Inventory/weapon_inventory.tscn" id="1_8b8pm"]
[ext_resource type="Script" uid="uid://cgu0skp2xbr5g" path="res://UI/Weapon Inventory/weapon_inventory_stats.gd" id="1_ycpec"]
[ext_resource type="FontFile" uid="uid://cpsua7jawk5h0" path="res://assets/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" id="2_ycpec"]
[ext_resource type="Texture2D" uid="uid://bs4cx7yep5fap" path="res://UI/SpriteSheet.png" id="3_fkugt"]
[ext_resource type="Texture2D" uid="uid://dupkb02w3h0mm" path="res://Entities/Weapons/Wands/bone_wand/sprites/primary.png" id="5_wqrjk"]
[ext_resource type="Texture2D" uid="uid://cuu1dkipphrde" path="res://Entities/Weapons/Wands/bone_wand/sprites/secondary.png" id="6_88aj4"]

[sub_resource type="Theme" id="Theme_wqrjk"]
Label/colors/font_color = Color(0.105882, 0.133333, 0.211765, 1)
Label/font_sizes/font_size = 10
Label/fonts/font = ExtResource("2_ycpec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_88aj4"]
texture = ExtResource("3_fkugt")
texture_margin_left = 5.0
texture_margin_top = 4.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(32, 320, 348, 68)

[sub_resource type="Animation" id="Animation_wqrjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_88aj4"]
resource_name = "close"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_rug2l"]
resource_name = "show_stats"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fkugt"]
resource_name = "spawn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponInventory:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rug2l"]
_data = {
&"RESET": SubResource("Animation_wqrjk"),
&"close": SubResource("Animation_88aj4"),
&"show_stats": SubResource("Animation_rug2l"),
&"spawn": SubResource("Animation_fkugt")
}

[node name="Control" type="Control" node_paths=PackedStringArray("weapon_inventory")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(239, 135)
script = ExtResource("1_ycpec")
weapon_inventory = NodePath("WeaponInventory")

[node name="WeaponInventory" parent="." instance=ExtResource("1_8b8pm")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.339
anchor_top = 0.061
anchor_right = 0.661
anchor_bottom = 0.939
offset_left = -0.220001
offset_top = 0.0299988
offset_right = 0.220001
offset_bottom = -0.030014

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.661
anchor_top = 0.152
anchor_right = 0.877
anchor_bottom = 0.415
offset_left = 13.72
offset_top = -0.0400009
offset_right = 19.04
offset_bottom = 1.95
pivot_offset = Vector2(44, 36)
theme = SubResource("Theme_wqrjk")
theme_override_styles/panel = SubResource("StyleBoxTexture_88aj4")

[node name="TitleContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="PanelContainer/TitleContainer"]
layout_mode = 2
text = "Weapon stats:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WeaponLevelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Level"

[node name="WeaponrarityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_constants/outline_size = 3
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 2

[node name="VBoxContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0

[node name="PrimaryAttackContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PrimarySprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PrimaryAttackContainer"]
layout_mode = 2
texture = ExtResource("5_wqrjk")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PrimaryAttackContainer"]
layout_mode = 2
theme_override_constants/margin_top = -3

[node name="PrimaryDamageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PrimaryAttackContainer/MarginContainer"]
layout_mode = 2
text = "test"

[node name="SecondaryAttackContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_direction = 2
layout_mode = 2

[node name="secondarySprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SecondaryAttackContainer"]
layout_mode = 2
texture = ExtResource("6_88aj4")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SecondaryAttackContainer"]
layout_mode = 2
theme_override_constants/margin_top = -3

[node name="secondaryDamageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SecondaryAttackContainer/MarginContainer"]
layout_mode = 2
text = "test"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rug2l")
}
